# matcha-bot

./: .env.example  .gitignore  =1.0.0  README.md  main.py  pyproject.toml  requirements.txt
.claude/: settings.local.json
agent/: README.md  pyproject.toml
agent/data/: user_map.json
agent/src/plugins/: agent.py
agent/src/plugins/agent/: chat_window.py  config.py  handlers.py  llm.py  user_map.py
docs/superpowers/plans/: 2026-05-20-agent-plugin-refactor.md
docs/superpowers/specs/: 2026-05-20-agent-plugin-refactor-design.md
example/src/yuki/: __init__.py  api.py  bot.py  response.py
matcha-bot/: pyproject.toml
matcha-bot/data/matcha/contexts/: private_unknown.json
matcha-bot/src/plugins/matcha/: __init__.py  config.py  context.py  handler.py  trigger.py
matcha-bot/src/plugins/matcha/provider/: base.py  openai.py
src/matcha_bot/: __init__.py  main.py
src/plugins/matcha/: __init__.py  config.py  context.py  handler.py  trigger.py
src/plugins/matcha/provider/: __init__.py  base.py  openai.py
src/yuki/: api.py  bot.py
tests/: test_context.py  test_main.py
