[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "matcha-bot"
version = "0.1.0"
description = "A basic Python project for matcha-bot"
readme = "README.md"
requires-python = ">=3.8"
authors = [{ name = "matcha-bot contributors" }]

[project.scripts]
matcha-bot = "matcha_bot.main:main"
